Fix layout issue, update main screen font

--- a/src/app/control/control.component.scss
+++ b/src/app/control/control.component.scss
@@ -85,32 +85,32 @@
         opacity: .9;
 
         &-1 {
-            top: -9vh;
+            top: -8vh;
             left: 11.3vw;
         }
 
         &-2 {
-            top: 9.5vh;
+            top: 10vh;
             left: .5vw;
         }
 
         &-3 {
-            top: 9.5vh;
+            top: 10vh;
             right: .3vh;
         }
 
         &-4 {
-            top: 29vh;
+            top: 30vh;
             left: 11.3vw;
         }
 
         &-5 {
-            top: -9vh;
+            top: -8vh;
             left: -1.8vw;
         }
 
         &-6 {
-            top: 29vh;
+            top: 30vh;
             left: -1.8vw;
         }
     }
